--- a/src/assets/styles/core/_global.scss
+++ b/src/assets/styles/core/_global.scss
@@ -6,269 +6,25 @@
 //   min-height: 100%;
 // }
 
+
+// dark mode support
+// body {
+// 	@media (prefers-color-scheme: dark) {
+// 		background-color: black;
+// 		color: $blue;
+
+// 		a {
+// 			color: $blue;
+// 			border-bottom-color: $blue;
+// 			fill: $blue;
+// 		}
+// 	}
+// }
+
 // Utilities
-.font-weight-medium {
-  font-weight: $font-weight-medium;
-}
-
-.gray-600 {
-  color: $gray-600;
-}
-
-.gray-500 {
-  color: $gray-500;
-}
-
-.word-break {
-  hyphens: auto;
-  -webkit-hyphens: auto;
-}
 
 // Elements
 
-
-h2,
-.h2 {
-  line-height: 1.4;
-  letter-spacing: 0.21px;
-}
-
-.btn-primary {
-  box-shadow: 0 2px 2px 0 rgba(15, 15, 15, 0.2);
-}
-
-.btn-block {
-  margin-bottom: 2rem;
-}
-
-hr {
-  border-color: #DFD8D8;
-}
-
-section {
-  padding-top: 3rem;
-  padding-bottom: 3.75rem;
-
-  & > p:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.header-logo {
-  margin-top: -0.55rem;
-  margin-bottom: 3rem;
-}
-
 // Components
 
-.navbar-scrolling {
-  transition: all .35s;
-  opacity: 0;
-  transform: translateY(-63px);
-  box-shadow: 0 8px 8px 0 #DED3C8;
-  padding-top: 17.5px;
-  padding-bottom: 17.5px;
-
-  &.scroll {
-    transform: none;
-    opacity: 1;
-  }
-
-  .wa {
-    width: 26px;
-  }
-
-  .phone-link {
-    font-size: .88rem;
-    margin-right: 18px;
-    margin-left: auto;
-    line-height: 1; 
-  }
-
-}
-
-ul {
-  @extend .list-unstyled;
-  margin-left: 20px;
-
-  li:not(:last-child) {
-    margin-bottom: 8px;
-  }
-
-  &:not(.h2) li {
-    line-height: 1.38rem;
-  }
-  
-  &.h2 {
-    li:not(:last-child) {
-    margin-bottom: 12px;
-    }
-  }
-
-  li::before {
-    content: "•";
-    color: $brown;
-    display: inline-block;
-    width: 20px;
-    margin-left: -20px;
-    font-size: 2rem;
-    vertical-align: middle;
-    line-height: 1;
-  }
-
-  &.blue-lines {
-    li {
-      color: $blue;
-    }
-    li::before {
-      content: "→";
-      font-size: 1em;
-      color: $primary;
-      width: 26px;
-    }
-  }
-}
-
-.carousel {
-  // для того чтобы индикаторы не заезжали на пэддинг секции
-  margin-bottom: 48px;
-}
-
-.carousel-indicators {
-  bottom: initial;
-  margin-bottom: 0;
-  li.active {
-    background-color: #5F6373;
-  }
-  li {
-    margin-top: 20px;
-    border-radius: 50%;
-    opacity: 1;
-  }
-}
-
-footer {
-  background-color: $green;
-  padding-top: 50px;
-  padding-bottom: 20px;
-  .footer-logo {
-    margin-bottom: 35px;
-  }
-  p {
-    margin-bottom: 12px;
-  }
-  a {
-    color: $white;
-  }
-  .social {
-    margin-top: 85px;
-  }
-  .copyright {
-    margin-top: 30px;
-    opacity: 0.5;
-  }
-}
-
-
-.card {
-  margin: 0 12px;
-  h2 {
-    color: $gray-900;
-  }
-  margin-bottom: 1.3rem;
-}
-
-.modal {
-  color: $gray-500;
-
-  label {
-    line-height: 1.25;
-  }
-
-  &-dialog {
-    @extend .h-100;
-    margin: 0;
-    padding: 0;
-  }
-  
-  &-content {
-    height: auto;
-    border-radius: 0;
-    min-height: 100%;
-  }
-
-  .btn-primary {
-    width: 190px;
-  }
-
-  .btn-light {
-    border-color: #B3B4B9;
-  }
-}
-
-
-
 // Specific sections
-
-.features {
-  margin-top: 1.8rem;
-  img {
-    margin-top: 1.66rem;
-    margin-bottom: 0.66rem;
-  }
-}
-
-.stories {
-  .embed-responsive {
-    margin-top: 1.66rem;
-    margin-bottom: 1.1rem;
-  }
-  p {
-    margin-bottom: 0.55rem;
-  }
-}
-
-// modal
-
-.modal {
-  h2 {
-    height: 48.19px;
-  }
-}
-
-.modal-header {
-  margin: 10px 10px 0;
-  .close {
-    opacity: 1;
-  }
-}
-
-.modal-body {
-  line-height: 1.33;
-}
-
-.form-control {
-  border-bottom: 1px solid $brown;
-}
-
-textarea.form-control {
-  resize: none;
-}
-
-.was-validated .form-control:invalid ~ label.form-label {
-  display: none;
-}
-
-#file {
-	width: 0.1px;
-	height: 0.1px;
-	opacity: 0;
-	overflow: hidden;
-	position: absolute;
-  z-index: -1;
-}
-
-#file:focus + label,
-#file + label:hover {
-    // background-color: red;
-}
