--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -41,4 +41,5 @@
 // @import "../../../node_modules/bootstrap/scss/utilities/visibility";
 
 // // Core
-// @import "core/global";
+// @import "core/mixins"; // for font-face
+@import "core/global";
